some atom group fun

--- a/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata_2016_03_04.ipynb
+++ b/Notebooks/p5-HackaMol-Vectors-Benzene-Metadata_2016_03_04.ipynb
@@ -202,27 +202,27 @@
      "data": {
       "text/plain": [
        "$VAR1 = bless( {\n",
+       "                 'name' => 'Benzene',\n",
        "                 't' => 0,\n",
+       "                 'bonds' => [],\n",
        "                 'atoms' => [\n",
        "                              bless( {\n",
-       "                                       'symbol' => 'C',\n",
-       "                                       'iatom' => 0,\n",
-       "                                       'name' => 'at0',\n",
        "                                       'bond_count' => 0,\n",
        "                                       't' => 0,\n",
+       "                                       'symbol' => 'C',\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '0',\n",
        "                                                              '1.40272',\n",
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
-       "                                                   ]\n",
+       "                                                   ],\n",
+       "                                       'name' => 'at0',\n",
+       "                                       'iatom' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
+       "                                       't' => 0,\n",
        "                                       'bond_count' => 0,\n",
-       "                                       'name' => 'at1',\n",
-       "                                       'symbol' => 'C',\n",
-       "                                       'iatom' => 1,\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '-1.21479',\n",
@@ -230,10 +230,12 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
-       "                                       't' => 0\n",
+       "                                       'name' => 'at1',\n",
+       "                                       'iatom' => 1,\n",
+       "                                       'symbol' => 'C'\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       't' => 0,\n",
+       "                                       'name' => 'at2',\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '-1.21479',\n",
@@ -241,12 +243,13 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
-       "                                       'symbol' => 'C',\n",
        "                                       'iatom' => 2,\n",
-       "                                       'name' => 'at2',\n",
+       "                                       'symbol' => 'C',\n",
+       "                                       't' => 0,\n",
        "                                       'bond_count' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
+       "                                       'iatom' => 3,\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '0',\n",
@@ -254,17 +257,12 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
-       "                                       't' => 0,\n",
-       "                                       'bond_count' => 0,\n",
        "                                       'name' => 'at3',\n",
        "                                       'symbol' => 'C',\n",
-       "                                       'iatom' => 3\n",
+       "                                       't' => 0,\n",
+       "                                       'bond_count' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       'name' => 'at4',\n",
-       "                                       'iatom' => 4,\n",
-       "                                       'symbol' => 'C',\n",
-       "                                       'bond_count' => 0,\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '1.21479',\n",
@@ -272,11 +270,13 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
+       "                                       'name' => 'at4',\n",
+       "                                       'iatom' => 4,\n",
+       "                                       'symbol' => 'C',\n",
+       "                                       'bond_count' => 0,\n",
        "                                       't' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       'bond_count' => 0,\n",
-       "                                       'name' => 'at5',\n",
        "                                       'symbol' => 'C',\n",
        "                                       'iatom' => 5,\n",
        "                                       'coords' => [\n",
@@ -286,13 +286,13 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
+       "                                       'name' => 'at5',\n",
+       "                                       'bond_count' => 0,\n",
        "                                       't' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       'name' => 'at6',\n",
        "                                       'iatom' => 6,\n",
-       "                                       'symbol' => 'H',\n",
-       "                                       'bond_count' => 0,\n",
+       "                                       'name' => 'at6',\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '0',\n",
@@ -300,42 +300,44 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
+       "                                       'symbol' => 'H',\n",
+       "                                       'bond_count' => 0,\n",
        "                                       't' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       'bond_count' => 0,\n",
        "                                       'iatom' => 7,\n",
-       "                                       'symbol' => 'H',\n",
        "                                       'name' => 'at7',\n",
-       "                                       't' => 0,\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '-2.15666',\n",
        "                                                              '1.24515',\n",
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
-       "                                                   ]\n",
+       "                                                   ],\n",
+       "                                       'symbol' => 'H',\n",
+       "                                       't' => 0,\n",
+       "                                       'bond_count' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
        "                                       't' => 0,\n",
+       "                                       'bond_count' => 0,\n",
+       "                                       'symbol' => 'H',\n",
+       "                                       'iatom' => 8,\n",
+       "                                       'name' => 'at8',\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '-2.15666',\n",
        "                                                              '-1.24515',\n",
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
-       "                                                   ],\n",
-       "                                       'bond_count' => 0,\n",
-       "                                       'iatom' => 8,\n",
-       "                                       'symbol' => 'H',\n",
-       "                                       'name' => 'at8'\n",
+       "                                                   ]\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
+       "                                       't' => 0,\n",
        "                                       'bond_count' => 0,\n",
        "                                       'symbol' => 'H',\n",
        "                                       'iatom' => 9,\n",
        "                                       'name' => 'at9',\n",
-       "                                       't' => 0,\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '0',\n",
@@ -345,10 +347,9 @@
        "                                                   ]\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       'bond_count' => 0,\n",
-       "                                       'name' => 'at10',\n",
        "                                       'symbol' => 'H',\n",
        "                                       'iatom' => 10,\n",
+       "                                       'name' => 'at10',\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '2.15666',\n",
@@ -356,13 +357,12 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
+       "                                       'bond_count' => 0,\n",
        "                                       't' => 0\n",
        "                                     }, 'HackaMol::Atom' ),\n",
        "                              bless( {\n",
-       "                                       'name' => 'at11',\n",
-       "                                       'iatom' => 11,\n",
        "                                       'symbol' => 'H',\n",
-       "                                       'bond_count' => 0,\n",
+       "                                       'name' => 'at11',\n",
        "                                       'coords' => [\n",
        "                                                     bless( [\n",
        "                                                              '2.15666',\n",
@@ -370,11 +370,11 @@
        "                                                              '0'\n",
        "                                                            ], 'Math::Vector::Real' )\n",
        "                                                   ],\n",
-       "                                       't' => 0\n",
+       "                                       'iatom' => 11,\n",
+       "                                       't' => 0,\n",
+       "                                       'bond_count' => 0\n",
        "                                     }, 'HackaMol::Atom' )\n",
-       "                            ],\n",
-       "                 'bonds' => [],\n",
-       "                 'name' => 'Benzene'\n",
+       "                            ]\n",
        "               }, 'HackaMol::Molecule' );\n"
       ]
      },
@@ -414,18 +414,18 @@
      "data": {
       "text/plain": [
        "$VAR1 = bless( {\n",
-       "                 'symbol' => 'C',\n",
-       "                 'iatom' => 0,\n",
-       "                 'name' => 'at0',\n",
        "                 'bond_count' => 0,\n",
        "                 't' => 0,\n",
+       "                 'symbol' => 'C',\n",
        "                 'coords' => [\n",
        "                               bless( [\n",
        "                                        '0',\n",
        "                                        '1.40272',\n",
        "                                        '0'\n",
        "                                      ], 'Math::Vector::Real' )\n",
-       "                             ]\n",
+       "                             ],\n",
+       "                 'name' => 'at0',\n",
+       "                 'iatom' => 0\n",
        "               }, 'HackaMol::Atom' );\n"
       ]
      },
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1026,6 +1026,14 @@
      "output_type": "stream",
      "text": [
       "1\n"
+     ]
+    },
+    {
+     "ename": "Warning",
+     "evalue": "overwrite fat_stacks.pdb at reply input line 27.\n",
+     "output_type": "error",
+     "traceback": [
+      "overwrite fat_stacks.pdb at reply input line 27.\n"
      ]
     }
    ],
@@ -1050,20 +1058,32 @@
     "            my $bnz = $bldr->read_string_mol($c6h6_xyz, 'xyz');\n",
     "            $bnz->translate(V($dx,$dy,$dz));\n",
     "\n",
-    "            $fat_stacks->push_atoms( $bnz->all_atoms);\n",
+    "            $fat_stacks->push_groups( $bnz );\n",
     "            $count++;\n",
     "            \n",
     "        }\n",
     "    }\n",
     "}\n",
-    "$fat_stacks->print_pdb('fat_stacks.pdb'); 1"
+    "$fat_stacks->print_pdb('fat_stacks.pdb'); 1;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Optional Exercise 5. Use the mercury axis code to make something interesting to look at\n"
+    "#### Exercise 5. use the groups within the \\$fat_stacks molecule to print out an xyz file with Hg at the center of mass for each benzene molecule.  \n",
+    "A hint:\n",
+    "\n",
+    "````\n",
+    "              say $_->COM foreach $fat_stacks->all_groups;\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optional Exercise 6. Use the mercury axis code to make something interesting to look at\n"
    ]
   },
   {
