improve printing of pdb and instructions for use

--- a/Notebooks/p5-HackaMol-SymmetryFun.ipynb
+++ b/Notebooks/p5-HackaMol-SymmetryFun.ipynb
@@ -23,15 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "HackaMol::Molecule=HASH(0x7fb052e023c8)\n"
-     ]
-    },
-    {
-     "ename": "Warning",
-     "evalue": "3RVY.pdb exists, set self->overwrite(1) to overwrite at /Users/riccade/perl5/perlbrew/perls/p5.22.1t/lib/site_perl/5.22.1/HackaMol.pm line 26.\n",
-     "output_type": "error",
-     "traceback": [
-      "3RVY.pdb exists, set self->overwrite(1) to overwrite at /Users/riccade/perl5/perlbrew/perls/p5.22.1t/lib/site_perl/5.22.1/HackaMol.pm line 26.\n"
+      "HackaMol::Molecule=HASH(0x7fec3818d020)\n"
      ]
     }
    ],
@@ -51,21 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "Undefined subroutine &main::V called at reply input line 14.\n",
-     "output_type": "error",
-     "traceback": [
-      "Undefined subroutine &main::V called at reply input line 14.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my $symops = '\n",
     "REMARK 350 APPLY THE FOLLOWING TO CHAINS: A, B                                  \n",
@@ -110,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -121,21 +104,11 @@
      "text": [
       "1\n"
      ]
-    },
-    {
-     "ename": "Warning",
-     "evalue": "overwrite 3RVY_1.pdb at reply input line 2.\n\noverwrite 3RVY_2.pdb at reply input line 4.\n",
-     "output_type": "error",
-     "traceback": [
-      "overwrite 3RVY_1.pdb at reply input line 2.\n\noverwrite 3RVY_2.pdb at reply input line 4.\n"
-     ]
     }
    ],
    "source": [
-    "$mol->t(1);\n",
-    "$mol->print_pdb('3RVY_1.pdb'); \n",
-    "$mol->t(2);\n",
-    "$mol->print_pdb('3RVY_2.pdb'); \n",
+    "$mol->qcat_print(1);\n",
+    "$mol->print_pdb_ts([0 .. $mol->tmax], '3RVY_sym.pdb'); \n",
     "1;"
    ]
   },
@@ -143,8 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### You may now load those two with \n",
-    "$vmdpath/vmd -m 3RVY_1.pdb 3RVY_2.pdb"
+    "### you now have a pdb for viewing. Transfer to your local machine\n",
+    "scp user@some.cluster.edu:path/to/3RVY_sym.pdb .\n",
+    "$vmdpath/vmd 3RVY_sym.pdb"
    ]
   }
  ],
