--- a/Notebooks/p5-Chem441-orbitals.ipynb
+++ b/Notebooks/p5-Chem441-orbitals.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -107,14 +107,14 @@
     "                  my $phi   = shift;\n",
     "                  #my $psi     = ($r/sqrt(32*pi*$a0**5))*exp(-$r/(2*$a0))*cos($theta);\n",
     "                  my $r21 = -sqrt(1/(2*2*(3*2*1)**3))*((2/(2*$a0))**2)*$r*exp(-$r/(2*$a0))*(-3*2*1);\n",
-    "                  #my $psi = sqrt(3/(4*pi))*sin($theta)*cos($phi); # px\n",
+    "                  my $psi = sqrt(3/(4*pi))*sin($theta)*cos($phi); # px\n",
     "                  #my $psi = sqrt(3/(4*pi))*sin($theta)*sin($phi); # py\n",
-    "                  my $psi = sqrt(3/(4*pi))*cos($theta); # pz\n",
+    "                  #my $psi = sqrt(3/(4*pi))*cos($theta); # pz\n",
     "                  #my $psi     = ($r*$r/(81*sqrt(6*pi*$a0**7)))*exp(-$r/(3*$a0))*(3*cos($theta)*cos($theta)-1);\n",
     "                  return ( $r21*$psi*$r21*$psi );\n",
     "};\n",
     "\n",
-    "cube_it($psipsi,'pz.cub',0.5);\n"
+    "cube_it($psipsi,'px.cub',0.5);\n"
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -151,6 +151,15 @@
     "\n",
     "cube_it($psipsi,'dz2.cub',0.5);\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
