chem441 worst energy that you can get

--- a/Notebooks/p5-HackaMol-X-ORCA-36H_6C_2N_15O.ipynb
+++ b/Notebooks/p5-HackaMol-X-ORCA-36H_6C_2N_15O.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "HackaMol::X::Orca=HASH(0x7fd13ff227f0)\n"
+      "HackaMol::X::Orca=HASH(0x7fdd2f423360)\n"
      ]
     }
    ],
@@ -66,22 +66,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "HackaMol=HASH(0x7fd1405ae4a8)\n"
+      "HackaMol=HASH(0x7fdd2f423138)\n"
      ]
     }
    ],
    "source": [
-    "my $H = 'H'; # multiplicity 2\n",
-    "my $C = 'C'; # multiplicity 5\n",
-    "my $N = 'N'; # multiplicity 4\n",
-    "my $O = 'O'; # multiplicity 3\n",
-    "\n",
     "my $bldr = HackaMol->new;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -123,65 +118,62 @@
      "data": {
       "text/plain": [
        "H -0.465915648675\n",
-       "O -74.337083980324\n"
+       "C -37.342542317013\n",
+       "N -54.051647128495\n",
+       "O -74.337083980325\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "Warning",
-     "evalue": "\"my\" variable @energies masks earlier declaration in same scope at reply input line 7.\n",
-     "output_type": "error",
-     "traceback": [
-      "\"my\" variable @energies masks earlier declaration in same scope at reply input line 7.\n"
-     ]
     }
    ],
    "source": [
     "$orca->mol($mol_H);\n",
-    "my @energies = $orca->ener;\n",
-    "say 'H '. $_ foreach @energies;\n",
+    "my @h_ener = $orca->ener;\n",
+    "say 'H '. $_ foreach @h_ener;\n",
     "\n",
+    "$orca->mol($mol_C);\n",
+    "my @c_ener = $orca->ener;\n",
+    "say 'C '. $_ foreach @c_ener;\n",
+    "\n",
+    "$orca->mol($mol_N);\n",
+    "my @n_ener = $orca->ener;\n",
+    "say 'N '. $_ foreach @n_ener;\n",
     "\n",
     "$orca->mol($mol_O);\n",
-    "my @energies = $orca->ener;\n",
-    "say 'O '. $_ foreach @energies;"
+    "my @o_ener = $orca->ener;\n",
+    "say 'O '. $_ foreach @o_ener;\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "say foreach @energies;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "the worst you can do is: -1463.987771 hartree\n"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "! PM3\n",
-      "* xyz 0 1\n",
-      "H     0.00000000   0.00000000   0.00000000\n",
-      "*\n",
-      "\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "`cat tmp/mol.inp`"
+    "printf (\"the worst you can do is: %10.6f hartree\\n\", -(36*0.465915648675+6*37.342542317013+2*54.051647128495+15*74.337083980325));"
    ]
   },
   {
